Bug 93733 - Assertion failed when clear font size field in paragraph style
Summary: Assertion failed when clear font size field in paragraph style
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2015-08-28 09:29 UTC by Regina Henschel
Modified: 2016-10-25 19:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt part with debug symbols (8.51 KB, text/plain)
2015-08-28 22:08 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2015-08-28 09:29:14 UTC
Open the dialog to modify a paragraph style.
Goto Tab Font.
Clear the field "Size" (for to enter a new value).
I get this error message:

Assertion failed!
Program: C:\LO_buildDebug\core\instdirßprogram\svtlo.dll
File: C:C\LO_buildDebug\core\include\rtl/ustring.hxx
Line: 517
Expression: index >=0 && static_cast<sal_uInt32>(index) < static_cast<sal_uInt32>(getLength())

I use a self-built debug build on 32-bit Windows7.
Version: 5.1.0.0.alpha1+
Build ID: d3de490437df4c9093f32e97fc185066d64c0f46
Locale: de-DE (de_DE)
Comment 1 Julien Nabet 2015-08-28 22:08:39 UTC
Created attachment 118248 [details]
bt part with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached main part of bt.
Comment 2 Julien Nabet 2015-08-28 22:09:21 UTC
On LO Debian package 4.4.5.2, I don't reproduce this=>regression
Comment 3 Julien Nabet 2015-08-28 22:13:40 UTC
patch for master sources waiting for review:
https://gerrit.libreoffice.org/#/c/18122/
Comment 4 Maxim Monastirsky 2015-08-29 20:18:23 UTC
(In reply to Julien Nabet from comment #2)
> On LO Debian package 4.4.5.2, I don't reproduce this=>regression
Debian's build isn't a debug build, you can't reproduce assertions there.
Comment 5 Commit Notification 2015-08-30 19:11:34 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33d8a094e1f8483abe2bfcfa118997beab034be5

tdf#93733: Assertion failed when clear font size field in paragraph style

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2015-08-30 19:52:46 UTC
(In reply to Maxim Monastirsky from comment #4)
> (In reply to Julien Nabet from comment #2)
> > On LO Debian package 4.4.5.2, I don't reproduce this=>regression
> Debian's build isn't a debug build, you can't reproduce assertions there.
Dumb me! You're right of course! :-)

Anyway, let's put it at FIXED now since it impacted only master sources.
Comment 7 Commit Notification 2015-10-15 17:19:10 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=861a9369dd42fe7cd92bcbfe72d96f2f15a9ccb5&h=libreoffice-5-0

tdf#93733: Assertion failed when clear font size field in paragraph style

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.