tdf#93733: Assertion failed when clear font size field in paragraph style

Change-Id: Ia7748eae16c35a1d197b9f4aa5f391f496e7f2f2
Reviewed-on: https://gerrit.libreoffice.org/18122
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
Signed-off-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit 861a9369dd42fe7cd92bcbfe72d96f2f15a9ccb5)